src/objects/ffirule__IntegrationRuleTargetTest__c.object
<CustomObject>
    <fields>
        <fullName>ffirule__ABooleanField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A Boolean Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__ALookupField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A Lookup Field</label>
        <referenceTo>ffirule__IntegrationRuleLookupTest__c</referenceTo>
        <relationshipLabel>Integration Rule Target Tests</relationshipLabel>
        <relationshipName>IntegrationRuleTargetTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffirule__ANumberField__c</fullName>
        <label>A Number Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__ATextField__c</fullName>
        <label>A Text Field</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__AnotherBooleanField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Another Boolean Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__AnotherStatus__c</fullName>
        <label>Another Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ffirule__Currency__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Currency</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ffirule__DateTime__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffirule__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffirule__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ffirule__IntegrationRuleSourceTest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClickLink Source Test</label>
        <referenceTo>ffirule__IntegrationRuleSourceTest__c</referenceTo>
        <relationshipLabel>ClickLink Target Tests</relationshipLabel>
        <relationshipName>IntegrationRuleTargetTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffirule__Number16__c</fullName>
        <label>Number16</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__Percent2__c</fullName>
        <label>Percent2</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ffirule__Percent4__c</fullName>
        <label>Percent4</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ffirule__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ffirule__PicklistMulti__c</fullName>
        <label>Picklist Multi</label>
        <picklist>
            <picklistValues>
                <fullName>Multi1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ffirule__Picklist__c</fullName>
        <label>Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Value1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ffirule__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ffirule__Syncing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Syncing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__Text10__c</fullName>
        <label>Text10</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__TextAreaLong__c</fullName>
        <label>Text Area Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffirule__TextAreaRich__c</fullName>
        <label>Text Area Rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ffirule__TextArea__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffirule__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>ClickLink Target Test</label>
    <listViews>
        <fullName>ffirule__All</fullName>
        <columns>NAME</columns>
        <columns>ffirule__ABooleanField__c</columns>
        <columns>ffirule__ANumberField__c</columns>
        <columns>ffirule__ATextField__c</columns>
        <columns>ffirule__Syncing__c</columns>
        <columns>ffirule__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IRTSTT-{00000000}</displayFormat>
        <label>ClickLink Target Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Target Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>